--- a/libraries.gradle
+++ b/libraries.gradle
@@ -1,11 +1,10 @@
 ext {
-    snoopyVersion = "1.0.0-RC1"
+    snoopyGrpcBaseVersion = "1.0.0-RC1"
     consulClientVersion = "1.5.1"
-
     library = [
-            //snoopy-microservices
-            snoopy_base  : "com.snoopy:snoopy-grpc-base:${snoopyVersion}",
-            //consul
-            consul_client: "com.orbitz.consul:consul-client:${consulClientVersion}"
+            //snoopy-grpc-base
+            snoopy_grpc_base: "com.snoopy:snoopy-grpc-base:${snoopyGrpcBaseVersion}",
+            //consul-client
+            consul_client   : "com.orbitz.consul:consul-client:${consulClientVersion}"
     ]
 }
